--- a/app/components/CodeSnippet/CodeSnippet.module.css
+++ b/app/components/CodeSnippet/CodeSnippet.module.css
@@ -9,4 +9,5 @@
   border-radius: 6px;
   border: 1px solid rgba(0, 0, 0, 0.329);
   font-family: "Fira Code", monospace;
+  font-weight: bold;
 }
